src/test/resources/wacc_examples/valid/classes/classCall.wacc
# a simple class is declared, but not called

# Output:
# #empty#

# Program:

begin
  class c {
    int t,
    char c
    int f() is
        return 0
    end
    bool b
  }
  c class1 = new c() ;
  int i = class1.f()
end
