src/test/resources/wacc_examples/invalid/syntaxErr/classes/badClassAssignment.wacc
# missing () at end of class initialization

# Output:
# #empty#

# Program:

begin
  class c {
    int t
  }
  c class1 = new c
end
